<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FE9F7"
    tools:context="FullImageActivity" >

    <!-- Going back to main window -->
    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/b1" />
    
    <!-- To exit the application -->
    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/button1"
        android:text="@string/b2" />
    
    <!-- For adjusting the audio -->
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_marginLeft="16dp"
        android:src="@drawable/mk2" />
    
    <!-- For adjusting the video -->
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_marginBottom="74dp"
        android:src="@drawable/mk3" />

    <!-- For the settings part -->
    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignTop="@+id/imageButton3"
        android:src="@drawable/mk4" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageButton3"
        android:text="@string/a2" />

    <!-- For adjusting the background -->
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/mk1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_below="@+id/imageButton1"
        android:text="@string/tt1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/imageButton2"
        android:text="@string/tt2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_below="@+id/imageButton4"
        android:text="@string/tt3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton4"
        android:layout_below="@+id/imageButton4"
        android:text="@string/tt4" />

</RelativeLayout>